--- a/scraping_notebook.ipynb
+++ b/scraping_notebook.ipynb
@@ -1044,12 +1044,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "id": "62cbd149",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"./speech_data.csv\")"
+    "df.to_csv(\"./speech_data.csv\", index=False)"
    ]
   }
  ],
