--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd \n",
+    "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt "
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -141,7 +141,7 @@
     }
    ],
    "source": [
-    "# View unique parties \n",
+    "# View unique parties\n",
     "df[\"Political Party\"].value_counts()"
    ]
   },
@@ -170,11 +170,13 @@
     }
    ],
    "source": [
-    "# Subset data with Republican or Democratic Presidents \n",
-    "df2 = df[(df[\"Political Party\"] == \"Republican\")|(df[\"Political Party\"] == \"Democrat\")].copy()\n",
+    "# Subset data with Republican or Democratic Presidents\n",
+    "df2 = df[\n",
+    "    (df[\"Political Party\"] == \"Republican\") | (df[\"Political Party\"] == \"Democrat\")\n",
+    "].copy()\n",
     "\n",
     "df2.head()\n",
-    "df2[\"Political Party\"].unique()\n"
+    "df2[\"Political Party\"].unique()"
    ]
   },
   {
@@ -211,9 +213,15 @@
     }
    ],
    "source": [
-    "sns.kdeplot(data=df2, x=\"Overall Ratio\", hue=\"Political Party\", \n",
-    "            palette={\"Republican\": \"red\", \"Democrat\":\"blue\"}, \n",
-    "            fill=True, alpha=0.3, linewidth=2)\n",
+    "sns.kdeplot(\n",
+    "    data=df2,\n",
+    "    x=\"Overall Ratio\",\n",
+    "    hue=\"Political Party\",\n",
+    "    palette={\"Republican\": \"red\", \"Democrat\": \"blue\"},\n",
+    "    fill=True,\n",
+    "    alpha=0.3,\n",
+    "    linewidth=2,\n",
+    ")\n",
     "plt.title(\"Distributions of Overall Ratios of Unifying to Polarizing Language Used\")"
    ]
   },
@@ -244,9 +252,15 @@
     }
    ],
    "source": [
-    "sns.barplot(data=df2, x=\"Political Party\", y=\"Overall Ratio\", alpha=0.7, hue=\"Political Party\", \n",
-    "            palette={\"Republican\": \"red\", \"Democrat\": \"blue\"})\n",
-    "sns.swarmplot(data=df2, x=\"Political Party\", y=\"Overall Ratio\", color='black')\n",
+    "sns.barplot(\n",
+    "    data=df2,\n",
+    "    x=\"Political Party\",\n",
+    "    y=\"Overall Ratio\",\n",
+    "    alpha=0.7,\n",
+    "    hue=\"Political Party\",\n",
+    "    palette={\"Republican\": \"red\", \"Democrat\": \"blue\"},\n",
+    ")\n",
+    "sns.swarmplot(data=df2, x=\"Political Party\", y=\"Overall Ratio\", color=\"black\")\n",
     "plt.title(\"Overall Ratios by Political Party\")"
    ]
   },
@@ -267,11 +281,13 @@
     }
    ],
    "source": [
-    "g = sns.FacetGrid(df2, \n",
-    "                  col=\"Political Party\", \n",
-    "                  hue=\"Political Party\", \n",
-    "                  palette={\"Republican\": \"red\", \"Democrat\": \"blue\"}, \n",
-    "                  height=5)\n",
+    "g = sns.FacetGrid(\n",
+    "    df2,\n",
+    "    col=\"Political Party\",\n",
+    "    hue=\"Political Party\",\n",
+    "    palette={\"Republican\": \"red\", \"Democrat\": \"blue\"},\n",
+    "    height=5,\n",
+    ")\n",
     "g.map(sns.scatterplot, \"Total Words Count\", \"Overall Ratio\", alpha=0.7)\n",
     "g.set_axis_labels(\"Total Words Count\", \"Overall Ratio\", size=12)\n",
     "g.set_titles(\"{col_name} Party\", size=12)\n",
