update speech data with more words

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -362,7 +362,7 @@
     "predictions = model.predict(X_test)\n",
     "\n",
     "# Evaluate the model\n",
-    "print(\"Training Accuracy:\", model.score(X_train, y_train))\n",
+    "# print(\"Training Accuracy:\", model.score(X_train, y_train))\n",
     "print(\"Testing Accuracy:\", accuracy_score(y_test, predictions))\n",
     "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, predictions))\n",
     "print(\"\\nClassification Report:\\n\", classification_report(y_test, predictions))\n"
@@ -423,6 +423,15 @@
    "outputs": [],
    "source": [
     "# DO LATER "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Future Ideas\n",
+    "* Limit to modern politics (Nixon and above)\n",
+    "* Add more words "
    ]
   }
  ],
