--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,12 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
-    "from scipy.stats import pointbiserialr\n"
+    "from scipy.stats import pointbiserialr\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -317,12 +322,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fit a Kitchen Sink Model (all features)"
+    "### Fit a Model with All Features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -346,36 +351,23 @@
       "weighted avg       0.38      0.40      0.38        10\n",
       "\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
     }
    ],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
     "# Feature and target selection\n",
-    "X = df2.drop(columns=['Political Party', \"Name\", \"Overall Language\"]) # X = df2[[\"Political Party\"]]\n",
-    "y = df2['Political Party']\n",
+    "X = df2.drop(columns=[\"Political Party\", \"Name\", \"Overall Language\"]) # X = df2[[\"Political Party\"]]\n",
+    "y = df2[\"Political Party\"]\n",
     "\n",
     "# Split the data into training and testing sets (80% train, 20% test)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "\n",
+    "# Apply Standard Scaling\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)  # Fit on train data and transform\n",
+    "X_test = scaler.transform(X_test)  # Only transform test data\n",
+    "\n",
     "# Create and train the logistic regression model\n",
-    "model = LogisticRegression()\n",
+    "model = LogisticRegression(max_iter=1000)\n",
     "model.fit(X_train, y_train)\n",
     "\n",
     "# Make predictions on the test set\n",
@@ -397,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -406,19 +398,19 @@
      "text": [
       "Feature Importance for Logistic Regression:\n",
       "                  Feature  Coefficient\n",
-      "0    Unifying Words Count     0.082134\n",
-      "1  Polarizing Words Count     0.148794\n",
-      "2       Total Words Count    -0.001379\n",
-      "3    Unifying Words Ratio     0.000462\n",
-      "4  Polarizing Words Ratio     0.001571\n",
-      "5           Overall Ratio     0.116004\n"
+      "0    Unifying Words Count     0.312664\n",
+      "1  Polarizing Words Count    -0.300659\n",
+      "2       Total Words Count    -0.461904\n",
+      "3    Unifying Words Ratio     0.183516\n",
+      "4  Polarizing Words Ratio     0.978647\n",
+      "5           Overall Ratio     0.486419\n"
      ]
     }
    ],
    "source": [
     "# Extract feature coefficients\n",
     "coefficients = model.coef_[0]\n",
-    "features = X_train.columns\n",
+    "features = X.columns  # Fix: Use X instead of X_train to get feature names\n",
     "\n",
     "# Create a DataFrame for better readability\n",
     "feature_importance = pd.DataFrame({'Feature': features, 'Coefficient': coefficients})\n",
@@ -438,41 +430,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing Accuracy: 0.5\n",
+      "Testing Accuracy: 0.4\n",
       "\n",
       "Confusion Matrix:\n",
-      " [[5 0]\n",
-      " [5 0]]\n",
+      " [[2 3]\n",
+      " [3 2]]\n",
       "\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.50      1.00      0.67         5\n",
-      "           1       0.00      0.00      0.00         5\n",
+      "           0       0.40      0.40      0.40         5\n",
+      "           1       0.40      0.40      0.40         5\n",
       "\n",
-      "    accuracy                           0.50        10\n",
-      "   macro avg       0.25      0.50      0.33        10\n",
-      "weighted avg       0.25      0.50      0.33        10\n",
+      "    accuracy                           0.40        10\n",
+      "   macro avg       0.40      0.40      0.40        10\n",
+      "weighted avg       0.40      0.40      0.40        10\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
     }
    ],
@@ -482,8 +462,13 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Feature and target selection\n",
-    "X = df2[[\"Unifying Words Count\", \"Polarizing Words Count\", \"Overall Ratio\"]] \n",
+    "X = df2[[\"Polarizing Words Ratio\", \"Overall Ratio\", \"Total Words Count\"]] \n",
     "y = df2[\"Political Party\"]\n",
+    "\n",
+    "# Apply Standard Scaling\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)  # Fit on train data and transform\n",
+    "X_test = scaler.transform(X_test)  # Only transform test data\n",
     "\n",
     "# Split the data into training and testing sets (80% train, 20% test)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=4002, stratify=y)\n",
@@ -854,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -878,20 +863,6 @@
       "weighted avg       0.33      0.33      0.33         3\n",
       "\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
     }
    ],
    "source": [
@@ -905,6 +876,11 @@
     "\n",
     "# Split the data into training and testing sets (80% train, 20% test)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+    "\n",
+    "# Apply Standard Scaling\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)  # Fit on train data and transform\n",
+    "X_test = scaler.transform(X_test)  # Only transform test data\n",
     "\n",
     "# Create and train the logistic regression model\n",
     "model = LogisticRegression()\n",
