update file paths

--- a/scripts/EDA.ipynb
+++ b/scripts/EDA.ipynb
@@ -8,12 +8,13 @@
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -106,13 +107,15 @@
        "2                 0.00275         2.4982  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"./speech_data.csv\")\n",
+    "notebook_dir = Path.cwd()\n",
+    "file_path = notebook_dir.parent / \"data\" / \"speech_data.csv\"\n",
+    "df = pd.read_csv(file_path)\n",
     "df.head(3)"
    ]
   },
