--- a/scripts/analysis.ipynb
+++ b/scripts/analysis.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
     "from scipy.stats import pointbiserialr\n",
+    "from pathlib import Path\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -147,13 +148,15 @@
        "4                 0.00753         0.8327  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"./speech_data.csv\")\n",
+    "notebook_dir = Path.cwd()\n",
+    "file_path = notebook_dir.parent / \"data\" / \"speech_data.csv\"\n",
+    "df = pd.read_csv(file_path)\n",
     "\n",
     "# Subset data with Republican or Democratic Presidents \n",
     "df2 = df[(df[\"Political Party\"] == \"Republican\")|(df[\"Political Party\"] == \"Democrat\")].copy()\n",
